--- a/src/app/image/image.component.html
+++ b/src/app/image/image.component.html
@@ -1,5 +1,5 @@
 <div>
   <h1>{{ title }}</h1>
-  <img width="300px" [src]="url" />
-  <p>{{ tags }}</p>
+  <img width="100%" [src]="url" />
+  <p class="tags">tags: {{ tags }}</p>
 </div>
