--- a/src/app/image-list/image-list.component.less
+++ b/src/app/image-list/image-list.component.less
@@ -1,5 +1,7 @@
 :host {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );
     column-gap: 3rem;
+    row-gap: 3rem;
+    padding: 2rem;
 }
