--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+html {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
