Wire the upload form

--- a/src/app/image-list/image-list.component.html
+++ b/src/app/image-list/image-list.component.html
@@ -1,6 +1,6 @@
 <app-image
   *ngFor="let image of images$ | async"
   [title]="image.title"
-  [url]="image.url"
+  [file]="image.file"
   [tags]="image.tags"
 ></app-image>
