--- a/src/app/upload-screen/upload-screen.component.html
+++ b/src/app/upload-screen/upload-screen.component.html
@@ -1,1 +1,8 @@
-<p>upload-screen works!</p>
+<h1>Upload your images here!</h1>
+
+<app-upload-form (formUpdate)="updateUploadDetails($event)"></app-upload-form>
+
+<ng-container *ngIf="uploadImages$ | async"> </ng-container>
+
+<p>Upload progress: {{ uploadProgress }}%</p>
+<button id="uploadBtn" (click)="onUpload()">&uarr;</button>
