Fix upload screen styling

--- a/src/app/upload-screen/upload-screen.component.less
+++ b/src/app/upload-screen/upload-screen.component.less
@@ -1,4 +1,14 @@
 :host {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 1rem 5rem;
+
+  .screenTitle {
+    margin-bottom: 3rem;
+    text-align: center;
+  }
+
   button {
     border: none;
     color: white;
