--- a/src/app/file-uploader/file-uploader.component.html
+++ b/src/app/file-uploader/file-uploader.component.html
@@ -1,8 +1,6 @@
 <!-- https://github.com/NetanelBasal -->
 <div class="file-drop-area">
   <span class="fake-btn">Choose file</span>
-  <span class="file-msg">{{
-    file ? file.name : "or drag and drop file here"
-  }}</span>
+  <span class="file-msg">{{ file ? file.name : "Upload file" }}</span>
   <input class="file-input" type="file" />
 </div>
