--- a/src/app/upload-screen/upload-screen.component.html
+++ b/src/app/upload-screen/upload-screen.component.html
@@ -1,4 +1,4 @@
-<h1>Upload your images here!</h1>
+<h1 class="screenTitle">Upload your images here!</h1>
 
 <app-upload-form (formUpdate)="updateUploadDetails($event)"></app-upload-form>
 
