Refactor upload screen

--- a/src/app/file-uploader/file-uploader.component.less
+++ b/src/app/file-uploader/file-uploader.component.less
@@ -17,12 +17,8 @@
 }
 
 .fake-btn {
-  background-color: #dbdbdd;
-  border-radius: 1rem;
-  padding: 8px 15px;
   margin-right: 8px;
-  font-size: 12px;
-  text-transform: uppercase;
+  font-size: small;
 }
 
 .file-msg {
