--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,4 @@
 <app-image-list></app-image-list>
-<app-upload-button></app-upload-button>
+<section class="actions">
+  <app-upload-button></app-upload-button>
+</section>
