--- a/src/app/upload-button/upload-button.component.html
+++ b/src/app/upload-button/upload-button.component.html
@@ -1,1 +1,8 @@
-<button routerLink="/upload">+</button>
+<button
+  mat-fab
+  color="warn"
+  aria-label="Upload new images"
+  routerLink="/upload"
+>
+  <mat-icon>upload</mat-icon>
+</button>
