--- a/src/app/upload-screen/upload-screen.component.less
+++ b/src/app/upload-screen/upload-screen.component.less
@@ -5,30 +5,7 @@
   padding: 0 1rem 5rem;
 
   .screenTitle {
-    margin-bottom: 3rem;
+    margin: 3rem;
     text-align: center;
-  }
-
-  button {
-    border: none;
-    color: white;
-    border-radius: 5rem;
-    transition: 0.5s;
-  }
-
-  #uploadBtn {
-    position: fixed;
-    bottom: 5rem;
-    right: 5rem;
-    width: 5rem;
-    height: 5rem;
-    font-size: 4rem;
-    background: #dd4040;
-    box-shadow: 1px 4px 5px 4px #865151;
-
-    &:hover {
-      background: #a92b2b;
-      box-shadow: #251515;
-    }
   }
 }
