--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
-
 html {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+
+  section.actions {
+    position: fixed;
+    bottom: 5rem;
+    right: 5rem;
+
+    > * {
+      margin-inline-start: 0.5rem;
+    }
+  }
 }
