--- a/src/app/file-uploader/file-uploader.component.html
+++ b/src/app/file-uploader/file-uploader.component.html
@@ -1,6 +1,6 @@
 <!-- https://github.com/NetanelBasal -->
 <div class="file-drop-area">
-  <span class="fake-btn">Choose file</span>
-  <span class="file-msg">{{ file ? file.name : "Upload file" }}</span>
+  <button mat-stroked-button class="fake-btn">Choose file</button>
+  <span class="file-msg">{{ file ? file.name : "Upload your file here" }}</span>
   <input class="file-input" type="file" />
 </div>
