--- a/src/app/upload-form/upload-form.component.html
+++ b/src/app/upload-form/upload-form.component.html
@@ -1,17 +1,37 @@
-<form class="parentForm" [formGroup]="uploadFormGroup">
-  <form
-    class="nestedForm"
-    *ngFor="let imageGroup of getImageFormNames()"
-    formGroupName="{{ imageGroup }}"
+<form [formGroup]="imageForm">
+  <label>Name:</label>
+  <input id="title" type="text" formControlName="title" />
+
+  <label>Tags:</label>
+  <input id="tags" type="text" formControlName="tags" />
+
+  <label>File:</label>
+  <app-file-uploader formControlName="file"></app-file-uploader>
+
+  <button
+    mat-fab
+    class="uploadBtn {{ uploadStatus }}"
+    color="secondary"
+    aria-label="Upload the image"
+    (click)="uploadImage()"
   >
-    <label>Name:</label>
-    <input id="title" type="text" formControlName="title" />
-
-    <label>Tags:</label>
-    <input id="tags" type="text" formControlName="tags" />
-
-    <label>File:</label>
-    <app-file-uploader formControlName="file"></app-file-uploader>
-  </form>
+    <mat-icon
+      aria-hidden="false"
+      aria-label="Example home icon"
+      [ngSwitch]="uploadStatus"
+    >
+      <span *ngSwitchCase="UPLOAD_STATUSES.READY_FOR_UPLOAD">upload</span>
+      <span *ngSwitchCase="UPLOAD_STATUSES.SUCCESS">done</span>
+      <span *ngSwitchCase="UPLOAD_STATUSES.ERROR">replay</span>
+      <span *ngSwitchCase="UPLOAD_STATUSES.LOADING">pending</span>
+    </mat-icon>
+  </button>
+  <button
+    mat-fab
+    color="warn"
+    aria-label="Delete the image"
+    (click)="removeImage()"
+  >
+    <mat-icon>delete</mat-icon>
+  </button>
 </form>
-<button id="newImageBtn" (click)="addNewImageForm()">+</button>
