--- a/src/app/upload-form/upload-form.component.less
+++ b/src/app/upload-form/upload-form.component.less
@@ -1,21 +1,19 @@
 :host {
   max-width: 100%;
 
-  form.parentForm {
-    display: inline-block;
-  }
-
-  form.nestedForm {
+  form {
     margin: 0.5rem;
     padding: 1rem;
     border-radius: 0.5rem;
     border: 1px solid #ebebeb;
 
-    * {
+    label,
+    input {
       margin-inline-end: 0.5rem;
       margin-bottom: 0.5rem;
     }
   }
+
   input[type="text"] {
     height: 2rem;
     border-radius: 0.5rem;
@@ -24,17 +22,6 @@
   }
 
   button {
-    border: none;
-    color: white;
-    border-radius: 5rem;
-    transition: 0.5s;
-  }
-
-  #newImageBtn {
-    width: 3rem;
-    height: 3rem;
-    font-size: 3rem;
-    line-height: 3rem;
-    background-color: cornflowerblue;
+    margin: 0 0.5rem;
   }
 }
