--- a/src/app/upload-form/upload-form.component.less
+++ b/src/app/upload-form/upload-form.component.less
@@ -12,6 +12,21 @@
       margin-inline-end: 0.5rem;
       margin-bottom: 0.5rem;
     }
+
+    section.formActions {
+      display: inline-grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-row-gap: 0.5rem;
+      margin-left: 1rem;
+
+      span.error {
+        grid-column: 1/3;
+        font-size: small;
+        color: red;
+        max-width: 7rem;
+        margin-left: 0.5rem;
+      }
+    }
   }
 
   input[type="text"] {
