Wire the search field

--- a/src/app/image-list/image-list.component.html
+++ b/src/app/image-list/image-list.component.html
@@ -1,5 +1,5 @@
 <app-image
-  *ngFor="let image of images$ | async"
+  *ngFor="let image of filteredImages$ | async"
   [title]="image.title"
   [file]="image.file"
   [tags]="image.tags"
