--- a/src/app/search-field/search-field.component.html
+++ b/src/app/search-field/search-field.component.html
@@ -1,4 +1,4 @@
-<form>
-  <input />
-  <button><mat-icon>search</mat-icon></button>
+<form [formGroup]="filterForm" (ngSubmit)="onSubmit()">
+  <input formControlName="filterCriteria" />
+  <button type="submit"><mat-icon>search</mat-icon></button>
 </form>
