Add search field

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<app-search-field></app-search-field>
 <app-image-list></app-image-list>
 <section class="actions">
   <app-upload-button></app-upload-button>
