--- a/src/app/image-list/image-list.component.less
+++ b/src/app/image-list/image-list.component.less
@@ -1,6 +1,7 @@
 :host {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 350px));
   column-gap: 3rem;
   row-gap: 3rem;
   padding: 2rem;
