--- a/src/app/search-field/search-field.component.less
+++ b/src/app/search-field/search-field.component.less
@@ -30,6 +30,10 @@
       height: 3rem;
       font-size: 2rem;
       padding: 0.5rem;
+
+      &:active {
+        color: #ebebeb;
+      }
     }
   }
 }
